--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/pfp_right.png" alt="Welcome">
+                <img src="assets/img/ProfilePic.png" alt="Welcome" style="width: 525px; height: auto;">>
               </div>
               <div class="intro--options">
                 <a href="#0">
