--- a/index.html
+++ b/index.html
@@ -57,19 +57,34 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/ProfilePic.png" alt="Welcome" style="width: 525px; height: auto;">>
+                <img src="assets/img/ProfilePic.png" alt="Welcome" style="width: 500px; height: auto;">>
               </div>
+              <h4 style="color: white; font-size: 16px; text-transform: uppercase; margin-bottom: 10px; font-weight: bold; letter-spacing: 1px;">
+                Skills
+              </h4>
               <div class="intro--options">
                 <a href="#0">
+                  <h3>Indesign</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <img src="assets/img/Indesign.jpg" alt="Indesign" style="width: 50px; height: auto;">
+                </a>
+                <a href="#0">
+                  <h3>Premiere Pro</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <img src="assets/img/PremierePro.png" alt="PremierePro" style="width: 50px; height: auto;">
+                </a>
+                <a href="#0">
+                  <h3>Canva</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <img src="assets/img/canva.webp" alt="Canva" style="width: 50px; height: auto;">
+                </a>
+                <a href="#0">
+                  <h3>Visual Studio Code</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <img src="assets/img/VSlogo.png" alt="VsCode" style="width: 65px; height: auto;">
+                </a>
+                <a href="#0">
                   <h3>Metiew &amp; Smith</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
-                </a>
-                <a href="#0">
-                  <h3>Fantasy interactive</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
-                </a>
-                <a href="#0">
-                  <h3>Paul &amp; shark</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                 </a>
               </div>
