--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>Portfolio Shiromenie</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -63,7 +63,7 @@
                 Skills
               </h4>
               <div class="intro--options">
-                <a href="#0">
+                <a href="file:///C:/Users/Gebruiker/Desktop/Portfolio%20Projects/MagazineEpicEscapes%20final%20v6.pdf" target="_blank">
                   <h3>Indesign</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                   <img src="assets/img/Indesign.jpg" alt="Indesign" style="width: 50px; height: auto;">
