logos and companies

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portfolio Shiromenie</title>
+  <title>Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,10 +15,9 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
-    <p>Global</p>
+    <p>Portfolio</p>
   </a>
-  <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">Mijn portfolio biedt een breed scala aan projecten. Draai je apparaat naar de portretmodus of gebruik een groter scherm voor de beste ervaring. Je zult niet teleurgesteld zijn!</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -26,29 +25,36 @@
     <div id="viewport" class="l-viewport">
       <div class="l-wrapper">
         <header class="header">
-          <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Global">
-            <p>Global</p>
+          <a class="header--logo" href="https://www.linkedin.com/in/shiromenie-kaulesarsing-40075b357/" target="_blank">
+            <img src="assets/img/LinkedInlogo.jpeg" alt="Global" style="width: 35px; height: auto;">
+            <p>LinkedIn</p>
+            <p>ShiromenieKaulesarsing</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <button class="header--cta cta">Contact Information</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
         </header>
         <nav class="l-side-nav">
           <ul class="side-nav">
-            <li class="is-active"><span>Home</span></li>
+            <li class="is-active"><span>About me</span></li>
+            <li><span>Companies</span></li>
             <li><span>Works</span></li>
-            <li><span>About me</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire me</span></li>
+            <li><span>Contact Information</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
           <li class="l-section section section--is-active">
             <div class="intro">
-              <div class="intro--banner">
-                <h1>Shiromenie<br>Kaulesarsing</h1>
+              <div class="intro--banner"> 
+                <h1 style="margin-bottom: 0;">Hi! I am, <br>Shiromenie<br>Kaulesarsing</h1>
+                <p style="margin-top: 0.5;">Als kind maakte ik al skits, nu probeer ik iets professionelers. Ik<br>
+                  ben creatief, nieuwsgierig en licht verslaafd aan dingen creëren.<br>
+                  Verhalen zijn mijn ding, in beeld, geluid of in een goeie grap.<br>
+                  Klaar om de wereld een beetje mooier [minstents intresanter]<br>
+                  te maken met behulp van media!</p>
+                
                 <button class="cta">Contact Information
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -57,7 +63,8 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/ProfilePic.png" alt="Welcome" style="width: 500px; height: auto;">>
+                <br>
+                <img src="assets/img/ProfilePic.png" alt="Welcome" style="width: 465px; height: auto;">
               </div>
               <h4 style="color: white; font-size: 16px; text-transform: uppercase; margin-bottom: 10px; font-weight: bold; letter-spacing: 1px;">
                 Skills
@@ -66,50 +73,63 @@
                 <a href="file:///C:/Users/Gebruiker/Desktop/Portfolio%20Projects/MagazineEpicEscapes%20final%20v6.pdf" target="_blank">
                   <h3>Indesign</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <br>
                   <img src="assets/img/Indesign.jpg" alt="Indesign" style="width: 50px; height: auto;">
                 </a>
                 <a href="#0">
                   <h3>Premiere Pro</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <br>
                   <img src="assets/img/PremierePro.png" alt="PremierePro" style="width: 50px; height: auto;">
                 </a>
                 <a href="#0">
-                  <h3>Canva</h3>
+                  <h3>Illustrator</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
-                  <img src="assets/img/canva.webp" alt="Canva" style="width: 50px; height: auto;">
+                  <br>
+                  <img src="assets/img/illustratorlogo.png" alt="PremierePro" style="width: 50px; height: auto;">
                 </a>
                 <a href="#0">
-                  <h3>Visual Studio Code</h3>
+                  <h3>PhotoShop</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
-                  <img src="assets/img/VSlogo.png" alt="VsCode" style="width: 65px; height: auto;">
+                  <br>
+                  <img src="assets/img/photoshoplogo.png" alt="PremierePro" style="width: 50px; height: auto;">
                 </a>
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
+                  <h3>VS Code</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <br>
+                  <img src="assets/img/VSlogo.png" alt="VsCode" style="width: 50px; height: auto;">
+                </a>
+                <a href="#0">
+                  <h3>Figma</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <br>
+                  <img src="assets/img/Figmalogo.png" alt="Figma" style="width: 50px; height: auto;">
                 </a>
               </div>
             </div>
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>Companies I worked with</h2>
+              <p>Click on the company to see the work!</p>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://drive.google.com/drive/folders/1E1EOnfg_ieyQs_LSbQ6tO7BQgyI8lBb6" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                        <img src="assets/img/fightclub.jpeg" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Victory</p>
+                      <p class="slider--item-title">FIGHTCLUB</p>
                       <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-center">
-                    <a href="#0">
+                  <li class="slider--item slider--item-center zoom in">
+                    <a href="https://drive.google.com/drive/folders/17aXSOv6vPxmlTYg4y7sZDRX6aVfvnCtb" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <img src="assets/img/BanijaySS.png"alt="Metiew and Smith" width="900" height="300">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
+                      <p class="slider--item-title">Banijay Benelux</p>
                       <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                     </a>
                   </li>
@@ -279,11 +299,11 @@
     </div>
   </div>
   <ul class="outer-nav">
-    <li class="is-active">Home</li>
+    <li class="is-active">About me</li>
+    <li>Companies</li>
     <li>Works</li>
-    <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Contact Information</li>
   </ul>
 </div>
 
