--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Companies I worked with</h2>
+              <h2>Projects for companies</h2>
               <p>Click on the company to see the work!</p>
               <div class="work--lockup">
                 <ul class="slider">
