--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <p style="margin-top: 0.5;">Als kind maakte ik al skits, nu probeer ik iets professionelers. Ik<br>
                   ben creatief, nieuwsgierig en licht verslaafd aan dingen creëren.<br>
                   Verhalen zijn mijn ding, in beeld, geluid of in een goeie grap.<br>
-                  Klaar om de wereld een beetje mooier [minstents intresanter]<br>
-                  te maken met behulp van media!</p>
+                  Mijn missie? mijn creativiteit inzetten om mensen te helpen, <br>
+                  een verhaal tegelijk.</p>
                 
                 <button class="cta">Contact Information
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -67,42 +67,57 @@
                 <img src="assets/img/ProfilePic.png" alt="Welcome" style="width: 465px; height: auto;">
               </div>
               <h4 style="color: white; font-size: 16px; text-transform: uppercase; margin-bottom: 10px; font-weight: bold; letter-spacing: 1px;">
-                Skills
+                Skills - Klik om het project te bekijken.
               </h4>
               <div class="intro--options">
                 <a href="file:///C:/Users/Gebruiker/Desktop/Portfolio%20Projects/MagazineEpicEscapes%20final%20v6.pdf" target="_blank">
                   <h3>Indesign</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <p>Magazine Epic Escapes 
+                    over reizen, avontuur en ontsnappen van realiteit.</p>
+                  <br>
+                  <br>
+                  <br>
                   <br>
                   <img src="assets/img/Indesign.jpg" alt="Indesign" style="width: 50px; height: auto;">
                 </a>
-                <a href="#0">
+                <a href="https://drive.google.com/drive/folders/150vBlmifzha0hP9UA7z0UGyVwl-ZmMPt">
                   <h3>Premiere Pro</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <p>Short documentary over Zen de hulphond en comercials.</p>
+                  <br>
+                  <br>
                   <br>
                   <img src="assets/img/PremierePro.png" alt="PremierePro" style="width: 50px; height: auto;">
                 </a>
-                <a href="#0">
+                <a href="https://drive.google.com/drive/folders/1aUdheJA_Gygszpn2TKYacv7V-RTw_Q1m">
                   <h3>Illustrator</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <p>Eigen brand genaamd Hippy gecreërt met visitekaartjes</p>
+                  <br>
+                  <br>
                   <br>
                   <img src="assets/img/illustratorlogo.png" alt="PremierePro" style="width: 50px; height: auto;">
                 </a>
-                <a href="#0">
+                <a href="https://drive.google.com/drive/folders/1quQlGInVIlAqmCTFKbx0o6Ru-EdG65V3">
                   <h3>PhotoShop</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <p>Creative poster ideeën gemaakt door PhotoShop</p>
+                  <br>
+                  <br>
+                  <br>
                   <br>
                   <img src="assets/img/photoshoplogo.png" alt="PremierePro" style="width: 50px; height: auto;">
                 </a>
-                <a href="#0">
+                <a href="file:///C:/Users/Gebruiker/Documents/GitHub/Encore-main4/index.html">
                   <h3>VS Code</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <p>Deze portfolio en 'Encore' <br>
+                  een theater website zijn gecodeert met VS studio</p>
                   <br>
                   <img src="assets/img/VSlogo.png" alt="VsCode" style="width: 50px; height: auto;">
                 </a>
-                <a href="#0">
+                <a href="https://www.figma.com/design/kyhUk42f7LJdlCF4pKUKK3/Medium-Fidelity-Prototype?node-id=18-2&t=zthsk6J8Tlha6ejJ-1">
                   <h3>Figma</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <p>UX en UI design voor school kantine app genaamd 'BuasBite'</p>
+                  <br>
+                  <br>
+                  <br>
                   <br>
                   <img src="assets/img/Figmalogo.png" alt="Figma" style="width: 50px; height: auto;">
                 </a>
@@ -110,9 +125,9 @@
             </div>
           </li>
           <li class="l-section section">
-            <div class="work">
-              <h2>Projects for companies</h2>
-              <p>Click on the company to see the work!</p>
+            <div class="work" style="text-align: center;">
+              <h2>Projects for companies:</h2>
+              <p>Click on the company to see my work!</p>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
@@ -121,25 +136,25 @@
                         <img src="assets/img/fightclub.jpeg" alt="Victory">
                       </div>
                       <p class="slider--item-title">FIGHTCLUB</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-description">24 uur project om een; product, marketing strategie en plannning te ontwikkelen voor HulpHond Nederland.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center zoom in">
                     <a href="https://drive.google.com/drive/folders/17aXSOv6vPxmlTYg4y7sZDRX6aVfvnCtb" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/BanijaySS.png"alt="Metiew and Smith" width="900" height="300">
+                        <img src="assets/img/Beni.jpg"alt="Metiew and Smith"width="0" height="300">
                       </div>
                       <p class="slider--item-title">Banijay Benelux</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-description">In samenwerking met australische studenten van QUT een game te ontwikkelen basis op een TV format van Benijay Benelux.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="https://drive.google.com/drive/folders/1ssqPoUW3b2Uw4PI0F-_S0FkIoHhs1oxc" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets/img/radio538.jpg" alt="Alex Nowak">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Radio 538</p>
+                      <p class="slider--item-description">Spotlight video for radio DJ Dylan Boet</p>
                     </a>
                   </li>
                 </ul>
@@ -166,8 +181,8 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
-                <a href="#0">Career
+                <h2>Mijn<br>Overige<br>projecten</h2>
+                <a href="https://drive.google.com/drive/folders/1TVJn1hEaqopcYHEOSJzZ65yOB_ARJu35">Google drive
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -176,17 +191,17 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/about-visual.png" alt="About Us">
+                <img src="assets/img/tigerblack.jpg" alt="About Us" width="900" height="600">
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>Promokit</h3>
                 </a>
                 <a href="#0">
-                  <h3>Philosophy</h3>
+                  <h3>Short Movie</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Live TV show</h3>
                 </a>
               </div>
             </div>
