--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <p style="margin-top: 0.5;">Als kind maakte ik al skits, nu probeer ik iets professionelers. Ik<br>
                   ben creatief, nieuwsgierig en licht verslaafd aan dingen creëren.<br>
                   Verhalen zijn mijn ding, in beeld, geluid of in een goeie grap.<br>
-                  Mijn missie? mijn creativiteit inzetten om mensen te helpen, <br>
-                  een verhaal tegelijk.</p>
+                  Mijn missie? mijn creativiteit inzetten om mensen te helpen. <br>
+                  Een verhaal tegelijk.</p>
                 
                 <button class="cta">Contact Information
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
