--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/tigerblack.jpg" alt="About Us" width="900" height="600">
+                <img src="assets/img/transparenttiger.png" alt="About Us" width="600" height="600">
               </div>
               <div class="about--options">
                 <a href="#0">
