--- a/index.html
+++ b/index.html
@@ -191,17 +191,20 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/transparenttiger.png" alt="About Us" width="600" height="600">
+                <img src="assets/img/ti.png" alt="About Us" width="500" height="600">
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Promokit</h3>
+                  <h3>YouTube video</h3>
+                  <img src="Assets/img/dutchiesindisguise.png" alt="" width="150" height="75">
                 </a>
                 <a href="#0">
                   <h3>Short Movie</h3>
+                  <img src="Assets/img/dearbff.png" alt="" width="150" height="75">
                 </a>
                 <a href="#0">
-                  <h3>Live TV show</h3>
+                  <h3>Zenergy documentary</h3>
+                  <img src="Assets/img/zenergy.png" alt="" width="150" height="75">
                 </a>
               </div>
             </div>
