--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <header class="header">
           <a class="header--logo" href="https://www.linkedin.com/in/shiromenie-kaulesarsing-40075b357/" target="_blank">
             <img src="assets/img/LinkedInlogo.jpeg" alt="Global" style="width: 35px; height: auto;">
-            <p>LinkedIn</p>
-            <p>ShiromenieKaulesarsing</p>
+            <p>LinkedIn: ShiromenieKaulesarsing</p>
           </a>
           <button class="header--cta cta">Contact Information</button>
           <div class="header--nav-toggle">
