--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <div class="intro">
               <div class="intro--banner"> 
                 <h1 style="margin-bottom: 0;">Hi! I am, <br>Shiromenie<br>Kaulesarsing</h1>
-                <p style="margin-top: 0.5;">Als kind maakte ik al skits, nu probeer ik iets professionelers. Ik<br>
-                  ben creatief, nieuwsgierig en licht verslaafd aan dingen creëren.<br>
-                  Verhalen zijn mijn ding, in beeld, geluid of in een goeie grap.<br>
-                  Mijn missie? mijn creativiteit inzetten om mensen te helpen. <br>
+                <p style="margin-top: 0.5;">Als kind maakte ik al skits met mijn vaders oude camera,nu probeer ik<br>
+                  iets professionelers. Ikben creatief, nieuwsgierig en licht verslaafd aan<br>
+                  dingen creëren. Verhalen zijn mijn ding, in beeld, geluid of in een<br>
+                  goeie grap. Mijn missie? mijn creativiteit inzetten om mensen te helpen. <br>
                   Een verhaal tegelijk.</p>
                 
                 <button class="cta">Contact Information
