--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
               <div class="intro--banner"> 
                 <h1 style="margin-bottom: 0;">Hi! I am, <br>Shiromenie<br>Kaulesarsing</h1>
                 <p style="margin-top: 0.5;">Als kind maakte ik al skits met mijn vaders oude camera,nu probeer ik<br>
-                  iets professionelers. Ikben creatief, nieuwsgierig en licht verslaafd aan<br>
+                  iets professionelers. Ik ben creatief, nieuwsgierig en licht verslaafd aan<br>
                   dingen creëren. Verhalen zijn mijn ding, in beeld, geluid of in een<br>
-                  goeie grap. Mijn missie? mijn creativiteit inzetten om mensen te helpen. <br>
-                  Een verhaal tegelijk.</p>
+                  goeie grap. Mijn missie? mijn creativiteit inzetten om mensen<br>
+                  te helpen, Een verhaal tegelijk.</p>
                 
                 <button class="cta">Contact Information
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
