--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="about">
               <div class="about--banner">
                 <h2>Mijn<br>Overige<br>projecten</h2>
-                <p>Klik op Google Drive om deze projecten en nog veel meer te bekijken!</p>
+                <h1>Klik op Google Drive om deze projecten en nog veel meer te bekijken! </h1>
                 <a href="https://drive.google.com/drive/folders/1TVJn1hEaqopcYHEOSJzZ65yOB_ARJu35">Google drive
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -373,7 +373,8 @@
                     <label for="email">Email</label>
                   </div>
                 </div>
-                <input type="submit" value="Send Request">
+                <a href="Assets/img/CV Shiromenie (1).pdf" download class="download-btn">Download mijn CV</a>
+              
               </form>
             </div>
           </li>
